k8s/base/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: tms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: khaledhawil/task-manager-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
